Tiny Bubbles/force-app/main/default/objects/Brewery__c/Brewery__c.object-meta.xml
<CustomObject>
    <label>Brewery</label>
    <nameField>
        <label>Brewery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Breweries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>