Tiny Bubbles/force-app/main/default/objects/Brewery__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>micro</fullName>
            </value>
            <value>
                <fullName>regional</fullName>
            </value>
            <value>
                <fullName>brewpub</fullName>
            </value>
            <value>
                <fullName>large</fullName>
            </value>
            <value>
                <fullName>planning</fullName>
            </value>
            <value>
                <fullName>bar</fullName>
            </value>
            <value>
                <fullName>contract</fullName>
            </value>
            <value>
                <fullName>proprietor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>