Tiny Bubbles/force-app/main/default/objects/Brewery__c/validationRules/Rating_Rulle.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Rulle</fullName>
    <active>true</active>
    <errorConditionFormula>0&gt; Rating__c &amp;&amp; 10 &lt; Rating__c</errorConditionFormula>
    <errorMessage>You must choose a number between one and ten or none at all.</errorMessage>
</ValidationRule>